all screens created and linked

--- a/src/guiconfig.ini
+++ b/src/guiconfig.ini
@@ -75,3 +75,4 @@ modes_control_pressure = Presión
 modes_control_volume = Volumen
 params_params = Parámetros
 alarms_alarms = Alarmas
+monitoring_monitoring = Monitorización
