--- a/respyratorgui/guiconfig.ini
+++ b/respyratorgui/guiconfig.ini
@@ -16,7 +16,7 @@
 
 [COLORs]
 black = 000000ff
-brand = 03fc2c
+brand = 31ab13
 grey_transparent = 0000003f
 transparent = 00000000
 white = ffffffff
